--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -27,6 +27,14 @@ html {
 	--surface-4-light: var(--gray-3);
 	--background-light: none;
 	--border-light: var(--gray-4);
+	overflow-y: scroll;
+}
+
+@supports (scrollbar-gutter: stable) {
+	html {
+		overflow-y: auto;
+		scrollbar-gutter: stable;
+	}
 }
 
 :root {
